--- a/templates/_include/_navbar.html.twig
+++ b/templates/_include/_navbar.html.twig
@@ -54,6 +54,7 @@
                     <a href="{{ path('app_workshop_index') }}" class="ms-4 mt-3 mt-md-0 text-md-center">{{ 'navbar.workshop'|trans }}</a>
                     <a href="{{ path('app_company') }}" class="ms-4 mt-3 mt-md-0 text-md-center">{{ 'navbar.company'|trans }}</a>
                     <a href="{{ path('contact_service') }}" class="ms-4 mt-3 mt-md-0 text-md-center">{{ 'navbar.contact'|trans }}</a>
+                    <a href="{{ path('app_book_index') }}" class="ms-4 mt-3 mt-md-0 text-md-center">{{ 'navbar.book'|trans }}</a>
                     {% if app.user %}
                         <a href="{{ path('app_user_index') }}" class="ms-4 mt-3 mt-md-0 text-md-center">{{ 'navbar.user'|trans }}</a>
                         <a href="{{ path('app_logout') }}" class="ms-4 mt-3 mt-md-0 text-md-center">{{ 'navbar.deconnect'|trans }}</a>
