--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -24,3 +24,5 @@
 @import "_company.scss";
 @import "_bookForm.scss";
 @import "_bookIndex.scss";
+@import "_giftCardIndex.scss";
+@import "_promotionalCodeForm.scss";
