--- a/templates/_include/_footer.html.twig
+++ b/templates/_include/_footer.html.twig
@@ -1,10 +1,10 @@
 <div class="footer-container">
     <div class="pre-footer mt-5"></div>
-    <div class="footer bg-primary d-flex text-white align-items-center justify-content-between justify-content-md-center">
-        <div class="d-flex flex-column flex-md-row align-items-md-center ms-2 ms-md-0">
-            <a class="mb-1 block" href="">Tarif</a>
-            <div class="d-flex flex-column block">
+    <div class="footer bg-primary d-flex text-white align-items-center justify-content-around">
+        <div class="d-flex flex-column flex-md-row align-items-md-center ms-2 ms-md-5">
+            <div class="d-flex flex-column">
                 <p class="">Email:<br>fabimage.coach@gmail.com</p>
+                <p class="mb-1">FABIMAGE OÜ<br>Reg nr: 14768242</p>
                 <div>
                     <a href="https://www.facebook.com/FabimageCoach"><img src="{{ asset('build/images/icons8-facebook-50.png') }}" alt=""></a>
                     <a href="https://www.instagram.com/fabimagecoach/"><img src="{{ asset('build/images/icons8-instagram-50.png') }}" alt="" class="ms-2"></a>
@@ -12,13 +12,16 @@
                 </div>
             </div>
         </div>
-        <div class="d-flex flex-column flex-md-row align-items-md-center">
-            <p class="mb-1 mb-md-0 block">FABIMAGE OÜ<br>Reg nr: 14768242</p>
-            <p class="mb-1 mb-md-0 block">Crédit: <a href="https://icones8.fr/">Icons8</a></p>
+        <div class="d-flex flex-column">
+            <a class="mt-2" href="{{ path('app_home') }}">home</a>
+            <a class="mt-2" href="{{ path('contact_service') }}">Contact</a>
+            <a class="mt-2" href="{{ path('app_service_index') }}">Prestations</a>
+            <a class="mt-2" href="">Tarifs</a>
         </div>
-        <div class="d-flex flex-column flex-md-row align-items-md-center me-2 me-md-0">
-            <p class="block mb-md-0">SWEDBANK<br>EE732200221072016678<br></p>
-            <p class="block mb-md-0">SWIFT kood/BIC<br>HABAEE2X</p>
+        <div class="d-flex flex-column justify-content-center me-2 mt-3 me-md-5">
+            <p class="mt-1">SWEDBANK<br>EE732200221072016678<br></p>
+            <p class="mt-1">SWIFT kood/BIC<br>HABAEE2X</p>
+            <p class="mt-1">Crédit: <a href="https://icones8.fr/">Icons8</a></p>
         </div>
     </div>
 </div>
