--- a/templates/presentation/company.html.twig
+++ b/templates/presentation/company.html.twig
@@ -1,6 +1,7 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}{{ 'company.title'|trans }}{% endblock %}
+{% block title %}{{ 'company.head.title'|trans }}{% endblock %}
+{% block metaDescription %}{{ "company.head.metaDescription"|trans }}{% endblock %}
 
 {% block body %}
     <div class="company">
