--- a/templates/presentation/fabienne.html.twig
+++ b/templates/presentation/fabienne.html.twig
@@ -1,6 +1,7 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}{{ 'Fabienne.title'|trans }}{% endblock %}
+{% block title %}{{ 'Fabienne.head.title'|trans }}{% endblock %}
+{% block metaDescription %}{{ "Fabienne.head.metaDescription"|trans }}{% endblock %}
 
 {% block body %}
     <div class="fabienne mx-auto">
