--- a/templates/service/index.html.twig
+++ b/templates/service/index.html.twig
@@ -1,6 +1,7 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Service index{% endblock %}
+{% block metaDescription %}{{ "service.head.metaDescription"|trans }}{% endblock %}
+{% block title %}{{ "service.head.title"|trans }}{% endblock %}
 
 {% block body %}
     <div class="service-index">
