--- a/templates/workshop/index.html.twig
+++ b/templates/workshop/index.html.twig
@@ -1,6 +1,7 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Workshop index{% endblock %}
+{% block metaDescription %}{{ "workshop.head.metaDescription"|trans }}{% endblock %}
+{% block title %}{{ "workshop.head.title"|trans }}{% endblock %}
 
 {% block body %}
     <div class="workshop-index">
