--- a/templates/book/buyedBookEmail.html.twig
+++ b/templates/book/buyedBookEmail.html.twig
@@ -5,7 +5,9 @@
     <title></title>
 </head>
 <body>
-<h1>Merci pour votre achat</h1>
-<p>Vous pouvez trouver le lien de votre livre dans les pièce jointe</p>
+    <p>{{ 'book.buyed.hello'|trans }}</p>
+    <p>{{ 'book.buyed.email.p'|trans|raw }}</p>
+    <a href="{{'http://localhost:8000' ~ path('app_download', {'token': token}) }}">{{ 'downloadBook'|trans }}</a>
+    <p>{{ 'book.buyed.email.p.end'|trans|raw }}</p>
 </body>
 </html>
