--- a/templates/book/edit.html.twig
+++ b/templates/book/edit.html.twig
@@ -5,9 +5,17 @@
 {% block body %}
     <div class="book-form">
         <h1 class="text-center mb-4 text-primary">Mettre a jour le livre</h1>
-
         {{ include('book/_form.html.twig', {'button_label': 'Mettre à jour'}) }}
-
-        {{ include('book/_delete_form.html.twig') }}
+        <div class="d-flex justify-content-center mt-4">
+            {{ include('book/_delete_form.html.twig') }}
+        </div>
+    <div class="d-flex justify-content-center mt-4">
+        <a href="{{ path('app_promotional_code_new', {id: book.id}) }}" class=""><button class="btn btn-secondary text-white">
+                Créer un code promotionnel
+            </button></a>
+        <a href="{{ path('app_promotional_code_index', {id: book.id}) }}" class="mx-3"><button class="btn btn-secondary text-white">
+                Mettre a jour les codes promotionnels
+            </button></a>
+    </div>
     </div>
 {% endblock %}
