--- a/templates/contact/index.html.twig
+++ b/templates/contact/index.html.twig
@@ -1,6 +1,7 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}{{ 'contact.contactMe'|trans }}{% endblock %}
+{% block title %}{{ 'contact.head.title'|trans }}{% endblock %}
+{% block metaDescription %}{{ "contact.head.metaDescription"|trans }}{% endblock %}
 
 {% block body %}
     <div class="contact-service">
@@ -49,7 +50,7 @@
                 {{ form_errors(form.agreements) }}
             </div>
             <div class="d-flex justify-content-center">
-                <button class="btn btn-secondary text-white mt-4 fs-5 px-4">envoyer</button>
+                <button class="btn btn-secondary text-white mt-4 fs-5 px-4">{{ 'contact.send'|trans}}</button>
             </div>
         {{ form_end(form) }}
         </div>
