--- a/templates/commentary_home/new.html.twig
+++ b/templates/commentary_home/new.html.twig
@@ -5,7 +5,9 @@
 {% block body %}
 <div class="commentary-form">
     <h1 class="text-primary text-center mb-5">Créer un nouveau commentaire</h1>
-
+    {% if error %}
+        <p class="text-center"> vous devez remplir tous les champs</p>
+    {% endif %}
     {{ include('commentary_home/_form.html.twig') }}
 </div>
 {% endblock %}
