--- a/templates/book/edit.html.twig
+++ b/templates/book/edit.html.twig
@@ -5,6 +5,9 @@
 {% block body %}
     <div class="book-form">
         <h1 class="text-center mb-4 text-primary">Mettre a jour le livre</h1>
+        {% if error %}
+            <p class="text-center"> vous devez remplir tous les champs</p>
+        {% endif %}
         {{ include('book/_form.html.twig', {'button_label': 'Mettre à jour'}) }}
         <div class="d-flex justify-content-center mt-4">
             {{ include('book/_delete_form.html.twig') }}
