--- a/templates/book/new.html.twig
+++ b/templates/book/new.html.twig
@@ -5,7 +5,9 @@
 {% block body %}
     <div class="book-form">
         <h1 class="text-primary mb-5 text-center">Créer un nouveau livre</h1>
-
+        {% if error %}
+            <p class="text-center">Vous devez remplir tous les champs</p>
+        {% endif %}
         {{ include('book/_form.html.twig') }}
     </div>
 {% endblock %}
