--- a/templates/commentary/edit.html.twig
+++ b/templates/commentary/edit.html.twig
@@ -5,7 +5,9 @@
 {% block body %}
     <div class="commentary-form">
         <h1 class="text-primary text-center mb-3">Mettre a jour le Commentaire</h1>
-
+        {% if error %}
+            <p class="text-center"> vous devez remplir tous les champs</p>
+        {% endif %}
         {{ include('commentary/_form.html.twig', {'button_label': 'Mettre a jour'}) }}
 
         {{ include('commentary/_delete_form.html.twig') }}
