--- a/templates/commentary/new.html.twig
+++ b/templates/commentary/new.html.twig
@@ -5,7 +5,9 @@
 {% block body %}
     <div class="commentary-form mb-3">
         <h1 class="text-center text-primary">Créer un nouveau commentaire</h1>
-
+        {% if error %}
+            <p class="text-center"> vous devez remplir tous les champs</p>
+        {% endif %}
     {{ include('commentary/_form.html.twig') }}
     </div>
 {% endblock %}
