--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -14,7 +14,7 @@
                 <iframe src="{{ 'home.video.link'|trans }}" title="{{ 'home.video'|trans }}" class="video"></iframe>
             </div>
         </div>
-        <div class="presentation d-md-flex">
+        <div class="presentation d-md-flex justify-content-center">
             <div class="left d-flex flex-column justify-content-center">
                 <div class="head text-white d-flex flex-column">
                     <h2 class="mx-4 mt-4 fs-2">{{ 'home.presentaion.head.title'|trans }}</h2>
