--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,6 +2,7 @@
 <html lang="{{ app.request.locale }}">
     <head>
         <meta charset="UTF-8" name="description" content="{% block metaDescription %}{% endblock %}">
+        <meta name="viewport" content="width=device-width,initial-scale=1.0">
         <title>{% block title %}Welcome!{% endblock %}</title>
         <link rel="icon" href="{{ asset('build/images/favicon.ico') }}">
         {% block stylesheets %}
